--- a/.github/workflows/main_njbudgetbackend.yml
+++ b/.github/workflows/main_njbudgetbackend.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - NjBudgetBackend
+name: Build and deploy ASP.Net Core app to Azure Web App - NjBudgetBackend to launch CI/CD
 
 on:
   push:
